--- a/templates/nadv.html
+++ b/templates/nadv.html
@@ -2,10 +2,9 @@
 {% load i18n %}
 
 {% block content %}
-<html lang="en">
+<div lang="en">
 
 <hr />
-
         <header class="bg-light py-5">
             <div class="container px-2 px-lg-5 my-5">
                 <div class="text-center text-purple">
@@ -26,5 +25,42 @@
 <!--{% block title %}-->
 <!--"Новость"-->
 <!--{% endblock title %}-->
+
+ <!-- Button trigger modal -->
+
+
+    <!-- Отклики-->
+{% if messages %}
+<div class = "alert.alert-success" >
+     {% for m in messages %}
+     {{m}}
+     {% endfor %}
+</div>
+    {% endif %}
+
+
+<form action="" method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <input type="submit" value="Save" />
+
+<br>
+Комментарии ({{nadv.reply.all.count}})
+    <hr>
+{% for n in  nadv.reply.all %}
+    {% if n.status is True %}
+    <li>
+        <div class="container px-2 px-lg-2 my-1">
+        Автор: {{n.author}}<br>
+        Текст: {{n.text_reply}}<br>
+        Дата: {{n.date_replay}}<br>
+            </div>
+        {% endif %}
+</li>
+{%endfor%}
+
+
+
+
 
 {% endblock content %}
