--- a/templates/nadv.html
+++ b/templates/nadv.html
@@ -21,7 +21,8 @@
 <h4 style="text-align: right;"><span style="color: #333333;">
     Категория:&nbsp;<img src="computer" alt="" /><img src="computer" alt="" />
     {{ nadv.category_name }}&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</span></h4>
-<img class="card-img-top" src="{{nadv.content.url}}" alt="..." />
+<img src="{{ nadv.content.url}}" alt="connect" style="max-height:300px">
+
 <!--{% block title %}-->
 <!--"Новость"-->
 <!--{% endblock title %}-->
