--- a/templates/adv.html
+++ b/templates/adv.html
@@ -13,7 +13,7 @@
 <form action="" method="post">
     {% csrf_token %}
     {{ form}}
-    <input type="submit" value="Авторизоваться" />
+   
 
 <div class="text-center text-dark">
 <form action="" method="get">
@@ -33,8 +33,10 @@
                         <div class="card h-100">
                             <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">{{nadv.category_name}}</div>
                             <!-- ADV image-->
+                            {% if nadv.content %}
 
                             <img class="card-img-top" src="{{nadv.content.url}}" alt="..." />
+                            {% endif %}
 
                             <!-- ADV details-->
                             <div class="card-body p-4">
