--- a/templates/code.html
+++ b/templates/code.html
@@ -8,7 +8,7 @@
 <form method="post">
 {% csrf_token %}
 
-<p><b>Введите код:</b></p>
+<p><b>Введите код из письма:</b></p>
     <p><textarea rows="1" cols="10" name="code"></textarea></p>
     <p><input type="submit" value="Продолжить"></p>
 <hr class="my-4" />
