--- a/templates/sign/makelogout.html
+++ b/templates/sign/makelogout.html
@@ -1,3 +1,5 @@
 <!DOCTYPE html>
 
 <h2> Вы вышли из системы </h2>
+
+<p style="text-align: center;"><button> <a href="{% url 'login' %}">Вернуться</a> </button></p>
