--- a/templates/personalpage.html
+++ b/templates/personalpage.html
@@ -1,42 +1,42 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title> Simple SignUp/SignIn app</title>
-    </head>
-    <body>
-        <div>
-            <h1><a href="/">Simple SignUp/SignIn app</a></h1>
-        </div>
+{% extends 'flatpages/default.html' %}
+
 {% block content %}
-<h2>Личный кабинет пользователя {{request.user.username}}</h2>
 
-        {{request.user.id}}
+<p style="text-align: right;"><button> <a href="sign/logout/">Выйти</a> </button></p>
+<p style="text-align: right;"><button> <a href="{% url 'password_change' %}">Изменить пароль</a> </button></p>
+<p style="text-align: center;"><strong>Личная страница пользователя {{request.user.username}}</strong></p>
+<p style="text-align: center;">Отклики на ваши объявления</p>
+<p style="text-align: left;">Вы можете принять понравившийся отклик, и тогда он отобразиться в комментариях к объявлению.</p>
 
+<p style="text-align: center;">&nbsp;</p>
+<table style="width: 526px; margin-left: auto; margin-right: auto;">
+    <tbody>
+<tr>
+<td style="width: 258.729px; text-align: center;"><span style="text-decoration: underline;">Отклики:</span></td>
+<td style="width: 252.271px; text-align: center;"><span style="text-decoration: underline;">Перейти к статье:</span></td>
+</tr>
 
-<div> Ваши объявления </div>
-        {{useradvs}}
-
-
-        {% for n in personal_adv %}
-        {{ n.id}}
-
-        {% if n.author == request.user %}
-        <br>{{n.text_adv}} <br>
-
-        {% for a in n.reply.all %}
-        {{ a.text_reply}}
-         <a href="/reply/accept/{{ reply.id }}" style="font-size: 12px; color:green"><b>принять</b></a>
-        {%endfor%}
-
-        {% endif %}
-        {% endfor %}
-
-<br>
-        <div> Отклики на ваши объявления.
-            Если вы хотите, чтобы отклик был виден, прдтвердите это: </div>
-
-
-<button> <a href="sign/logout/">Выйти</a> </button>
+<tr>{% for n in personal_adv %}
+            {% if request.user == n.adv.author%}
+<td style="width: 258.729px; text-align: center;">
+        {{n.author}}
+        {{n.text_reply}}<br>
+    <p>
+{% if not n.status %}
+            <a href="{% url 'reply_accept' n.id %}"><u>Принять отклик</u></a>
+            {% endif %}
+            <a href="{% url 'reply_delete' n.id %}"><u>Удалить отклик</u></a>
+</td>
+<td style="width: 252.271px; text-align: center;">
+<a href="{% url 'nadv' n.adv.id %}"><u>{{n.adv.head_adv}}</u></a>
+</td></tr>
+    {% endif %}
+{% endfor %}
+</tbody>
+    </table>
 {% endblock %}
+
+
     </body>
-</html>
+
